[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Atarian/italic.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Crosshair.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Weapons/Weapon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/hp_bar.gd" type="Script" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 1.2
height = 9.0

[sub_resource type="CapsuleMesh" id=4]
radius = 1.2
mid_height = 9.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BodyCollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.70016, 0 )
shape = SubResource( 1 )

[node name="HeadPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.4, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="WeaponPivot" type="Spatial" parent="HeadPivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.2877, -1.37043, 1.95475 )
__meta__ = {
"_edit_group_": true
}

[node name="Weapon" parent="HeadPivot/WeaponPivot" instance=ExtResource( 4 )]

[node name="Camera" type="Camera" parent="HeadPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
fov = 95.1
far = 400.0

[node name="Crossshair" type="TextureRect" parent="HeadPivot/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 30.0
margin_bottom = 30.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="TopDownPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 56, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera" type="Camera" parent="TopDownPivot"]
transform = Transform( -1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 50, 0 )
keep_aspect = 0
current = true
fov = 74.0
size = 150.0
near = 39.74
far = 679.5

[node name="Model" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CapsuleMesh" type="MeshInstance" parent="Model"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 5.7, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="Hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="hp_bar" type="ColorRect" parent="Hud"]
anchor_right = 5.0
margin_left = 30.0
margin_top = 560.0
margin_right = 30.0
margin_bottom = 580.0
color = Color( 1, 0.105882, 0.105882, 1 )
script = ExtResource( 5 )
factor = 10.0

[node name="Label" type="Label" parent="Hud"]
margin_left = 9.0
margin_top = 562.0
margin_right = 49.0
margin_bottom = 579.0
custom_fonts/font = ExtResource( 2 )
text = "HP"
